# daedalus

./: .gitignore  Cargo.toml  LICENSE  README.md  compile.sh
src/: decrypt.rs  encrypt.rs  file_format.rs  legacy.rs  main.rs  ui.rs
