[package]
name = "daedalus"
version = "2.2.0"
edition = "2021"
authors = ["Antonio Aguilar <antonioaja@protonmail.com>"]
license = "MIT"
description = "A CLI program to encrypt/decrypt files"
readme = "README.md"
homepage = "https://github.com/antonioaja/daedalus"
repository = "https://github.com/antonioaja/daedalus"
keywords = ["cli", "encryption", "decryption"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[dependencies]
libaes = "0.6.4"
anyhow = "1.0.58"
clap = { version = "4.2.5", features = ["derive"] }
rand = "0.8.5"
argon2 = "0.5.0"
blake3 = "1.3.3"
rpassword = "7.2.0"
indicatif = "0.17.3"
console = "0.15.5"
